Use libhat for pattern scanning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ set(CMAKE_CXX_STANDARD 23)
 
 include(FetchContent)
 
+FetchContent_Declare(libhat
+        GIT_REPOSITORY https://github.com/BasedInc/libhat.git
+        GIT_TAG e457476d3c4f38242ec65998007221a413f1f26f
+        EXCLUDE_FROM_ALL)
+
 FetchContent_Declare(safetyhook
         GIT_REPOSITORY https://github.com/cursey/safetyhook.git
         GIT_TAG b046e123dc69821f2c375161e0adef3c6d9c9db4
@@ -13,10 +18,10 @@ FetchContent_Declare(safetyhook
 
 set(SAFETYHOOK_FETCH_ZYDIS ON)
 
-FetchContent_MakeAvailable(safetyhook)
+FetchContent_MakeAvailable(libhat safetyhook)
 
-add_library(fullbright SHARED src/main.cpp src/sig.cpp)
+add_library(fullbright SHARED src/main.cpp)
 
-target_link_libraries(fullbright PUBLIC safetyhook::safetyhook)
+target_link_libraries(fullbright PUBLIC libhat safetyhook::safetyhook)
 
 install(TARGETS fullbright LIBRARY DESTINATION mods)
